<?xml version="1.0"?>
<package format="2">
  <name>gazebo_frcrobot_control</name>
  <version>0.0.1</version>
  <description>gazebo_frcrobot_control</description>

  <maintainer email="programmers@team900.org">FRC Team900 Programmers</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>gazebo_dev</build_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>control_toolbox</depend>
  <depend>controller_manager</depend>
  <depend>pluginlib</depend>
  <depend>hardware_interface</depend>
  <depend>transmission_interface</depend>
  <depend>joint_limits_interface</depend>
  <depend>urdf</depend>
  <depend>angles</depend>

  <export>
  </export>
</package>
